# ToolCL

./: CMakeLists.txt  LICENSE  README.md
examples/: hello_logger.c  hello_math.c  hello_random.c  hello_string.c  hello_vec2.c  hello_world.c
include/toolcl/: hello_world.h  logger.h  math.h  string.h  vec2.h
src/: logger.c  math.c  string.c  vec2.c
